src/main/java/org/example/bank/_core/errors/exceptions/Exception403.java
package org.example.bank._core.errors.exceptions;

public class Exception403 extends RuntimeException{

    public Exception403(String msg) {
        super(msg);
    }
}